# roof-hopper

./: CHANGELOG.md  Cargo.toml  README.md
resources/: display_config.ron  game_config.ron
resources/sprites/: Roof North.ron  background.ron
src/: application.rs  bundle.rs  components.rs  config.rs  entities.rs  game_data.rs  game_events.rs  main.rs  resources.rs  states.rs  systems.rs
src/components/: background_component.rs  collision_component.rs  hopper_component.rs  rooftop_component.rs
src/entities/: background_entity.rs  camera_entity.rs  hopper_entity.rs  rooftop_entity.rs
src/resources/: main_camera_entity_resource.rs  player_entity_resource.rs  rooftop_sprite_resource.rs
src/states/: hopper_game_state.rs  hopper_loading_state.rs
src/systems/: camera_movement_system.rs  entity_collision_system.rs  hopper_boundary_system.rs  hopper_collision_state_system.rs  hopper_jump_system.rs  hopper_rest_system.rs  hopper_soaring_system.rs  rooftop_collider_management_system.rs
