[package]
name = "roof-hopper"
version = "0.1.0"
authors = ["trsolutions <thomas_odell@trsolutions.biz>"]
edition = "2018"

[features]
default = [ ]

vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15"
log = { version = "0.4.8", features = ["serde"] }
amethyst-rhusics = { git = "https://github.com/trsoluti/amethyst-rhusics.git" }
cgmath = "0.17"
