[package]
name = "roof-hopper"
version = "0.1.0"
authors = ["trsolutions <thomas_odell@trsolutions.biz>"]
edition = "2018"

[features]
default = ["metal"] # TEMPORARY! REMOVE BEFORE PUSHING!

vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15"
log = { version = "0.4.8", features = ["serde"] }
lazy_static = "*"
serde = "*"
serde_derive = "*"
amethyst-rhusics = { git = "https://github.com/trsoluti/amethyst-rhusics.git" }
cgmath = "0.17"
